Update 'x3oyt3k2r-java-springboot' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-57f9538c64.dtjo.p3.openshiftapps.com/rhtap/rhtap-qe:91bf983579b54fae70082e22ef84c5797900e045@sha256:b3aec3e26c0513aac62463354de946edabf51678024cc5e81bc8597eed973a85

--- a/components/x3oyt3k2r-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/x3oyt3k2r-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: x3oyt3k2r-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-57f9538c64.dtjo.p3.openshiftapps.com/rhtap/rhtap-qe:91bf983579b54fae70082e22ef84c5797900e045@sha256:b3aec3e26c0513aac62463354de946edabf51678024cc5e81bc8597eed973a85
+          name: container-image
